fix: corrección de logs no necesarios y de gestión de error en caso de ausencia del archivo config.properties